--- a/set.html
+++ b/set.html
@@ -14,6 +14,9 @@
    <div class="hero-unit" id="results"> <h1>Scores:</h1>
     <p><h2>Player 1: <span id="score"></span></h2></p>
    </div>
+   <div class="hero-unit" id="results_corr"> <h1>Scores:</h1>
+    <p><h2>Player 1: <span id="score"></span></h2></p>
+   </div>
    <div id="game"></div>
    <div id="stack"></div>
 
