--- a/menu.html
+++ b/menu.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>set</title>
-    <link href="css/bootstrap.css" rel="stylesheet">
-    <script src="js/jquery.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
+    <link href="stylesheets/bootstrap.css" rel="stylesheet">
+    <script src="javascripts/jquery.min.js"></script>
+    <script src="javascripts/bootstrap.min.js"></script>
   </head>
   <body style="background-color:rgb(236, 240, 241);  -moz-user-select: none;
   -khtml-user-select: none;
