stupid apple sh*t

--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+    <meta name="apple-mobile-web-app-capable" content="yes">
     <title>set</title>
     <link href="stylesheets/bootstrap.css" rel="stylesheet">
     <script src="javascripts/jquery.min.js"></script>
